fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 
   width:95%;
   font-family: Arial, Helvetica, sans-serif;
-  height: 6000px;
+  height: 3500px;
 }
 
 main{
@@ -90,7 +90,7 @@ a{
   color:white;
   width:75%;
   margin: auto;
-  margin-top:60px;
+  margin-top:200px;
   padding:30px;
   text-align: center;
   background-color: rgba(255,255,255,0.3);
